--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,73 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
-# next.js
-/.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
+# Node
+node_modules/
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+logs/
+*.log
 
-# env files (can opt-in for committing if needed)
-.env*
+# Next.js build
+.next/
+out/
+build/
+dist/
+.vercel/
+.vercel_build_output/
 
-# vercel
-.vercel
+# Env / secrets
+.env
+.env.*.local
+.env.local
+.env.production.local
+.env.development.local
+.env.test.local
 
-# typescript
+# Clerk
+.clerk/
+clerk.env
+
+# Drizzle (DO NOT IGNORE migrations)
+# Only ignore local DB files
+*.sqlite
+*.sqlite3
+*.db
+*.sql
+*.dump
+
+# Typescript build(optional)
 *.tsbuildinfo
-next-env.d.ts
+
+# IDE / OS
+.DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.swp
+*~
+.project
+.classpath
+.settings/
+*.sublime-project
+*.sublime-workspace
+
+# Cache / storybook
+.cache/
+.cache-loader/
+storybook-static/
+
+# Test / temp
+.vitest/
+coverage/
+temp/
+tmp/
+test-results/
+
+# Docker
+docker-compose.override.yml
+docker-compose.*.yml
+Dockerfile.*.local
+
+# Lockfiles (optional)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
