Refactor: migrate DB to PostgreSQL, update deps & cleanup
- Removed MySQL snapshots
- Updated journal.json for PostgreSQL
- Added pg & upgraded drizzle-kit
- Switched index.js to drizzle-orm (PostgreSQL)
- Updated schema.js with PostgreSQL types/enums
- Refactored image/user handling
- Improved dashboard UX (loading states, time formatting)
- Cleaned console logs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:generate": "drizzle-kit generate"
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.5",
@@ -31,6 +32,7 @@
     "lucide-react": "^0.554.0",
     "mysql2": "^3.15.3",
     "next": "16.0.4",
+    "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hot-toast": "^2.6.0",
@@ -40,7 +42,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "baseline-browser-mapping": "^2.8.32",
-    "drizzle-kit": "^0.31.7",
+    "drizzle-kit": "^0.31.8",
     "eslint": "^9",
     "eslint-config-next": "16.0.4",
     "tailwindcss": "^4",
