--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.554.0",
     "mysql2": "^3.15.3",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "pg": "^8.16.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
